; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/events/extr_events_base.c_xen_set_callback_via.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/events/extr_events_base.c_xen_set_callback_via.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xen_hvm_param = type { i32, i32, i32 }

@DOMID_SELF = common dso_local global i32 0, align 4
@HVM_PARAM_CALLBACK_IRQ = common dso_local global i32 0, align 4
@HVMOP_set_param = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xen_set_callback_via(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.xen_hvm_param, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @DOMID_SELF, align 4
  %5 = getelementptr inbounds %struct.xen_hvm_param, %struct.xen_hvm_param* %3, i32 0, i32 2
  store i32 %4, i32* %5, align 4
  %6 = load i32, i32* @HVM_PARAM_CALLBACK_IRQ, align 4
  %7 = getelementptr inbounds %struct.xen_hvm_param, %struct.xen_hvm_param* %3, i32 0, i32 1
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* %2, align 4
  %9 = getelementptr inbounds %struct.xen_hvm_param, %struct.xen_hvm_param* %3, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* @HVMOP_set_param, align 4
  %11 = call i32 @HYPERVISOR_hvm_op(i32 %10, %struct.xen_hvm_param* %3)
  ret i32 %11
}

declare dso_local i32 @HYPERVISOR_hvm_op(i32, %struct.xen_hvm_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
